k8s/provider/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: provider
spec:
  hosts:
    - provider
    - provider.gitops-v2.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: "/req"
      route:
        - destination:
            # with a 'migration' flag the destination host can be changed from gitops-v2 to the new gitops-provider namespace
            host: provider.gitops-provider.svc.cluster.local
            port:
              number: 80
  exportTo:
    - "*"
